--- a/BlackJackApp.Controllers/Views/Shared/_Layout.cshtml
+++ b/BlackJackApp.Controllers/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("History", "ShowGames", "History")</li>
+                    <li>@Html.ActionLink("Game", "StartGame", "Game")</li>
                 </ul>
             </div>
         </div>
